tests/gpu/codegen/cute/mma_error.co
// RUN: not choreo -gs -t cute %s 2>&1 | FileCheck %s

#define M 128
#define N 256
#define K 64

__co__ auto matmul(f16 [M, K] lhs, f16 [K, N] rhs) {
  f16 [M, N] output;

  int MMA_M = 16, MMA_N = 16, MMA_K = 16;

  parallel {m, n} by [M / MMA_M / 4, N / MMA_N ] : block {
    mc = mma.fill 0.0;  // c = {0}
    parallel {g0, g1} by [4, 1]: group {
      mc = mma.fill 0.0;  // c = {0}
      foreach k in K / MMA_K {
        ma = mma.load lhs.chunkat(m#g0, k);
        mb = mma.load rhs.chunkat(k, n#g1);
        mma.row.col mc, ma, mb;   // row * col : c += a * b;
      }
      mma.store mc, output.chunkat(m#g0, n#g1);
    }
  }

  return output;
}

// CHECK: error: the MMA operation of `::matmul::paraby_0::mc` cannot be executed.
// CHECK: Assertion failed: MMA information is incomplete (maybe lack of mma exec).
